# CLI-agent-memory

./: .coverage  .gitignore  MIGRATION_TO_V2.md  README.md  audit_test_real.py  install.sh  print_err.py  pyproject.toml  release_notes_v1.1.0.md  verify.sh
.checkpoints/: 1777808227_configuration.json  1777808227_dependencies.json  1777808227_detection.json  1777808227_services.json  1777808227_sync.json  1777808227_verification.json  1777814142_configuration.json  1777814142_dependencies.json  1777814142_detection.json  1777814142_services.json  1777814142_sync.json  1777814142_verification.json  1777819869_configuration.json  1777819869_dependencies.json  1777819869_detection.json  1777819869_services.json  1777819869_sync.json  1777819869_verification.json
adapters/: README.md
adapters/opencode/: backpack-orchestrator.ts
docs/: ARCHITECTURE.md  CHECKLIST-R1.md  DECISIONES.md  DECISIONS.md  SPEC-v1.md  SPEC-v2.md  SPEC-v3.md  SPEC-v4.md  SPEC-v5.md
install/: manifest.json  update.sh  version.sh
src/CLI_agent_memory/: __init__.py  __main__.py  cli.py  cli_helpers.py  commands.py  commands_extra.py  config.py  doctor.py  output.py  parser.py
src/CLI_agent_memory/domain/: exit_codes.py  file_ops.py  loop.py  protocols.py  stagnation.py  state.py  types.py
src/CLI_agent_memory/domain/db/: schema.py
src/CLI_agent_memory/prompts/: templates.py
tests/: test_commands.py  test_config.py  test_local_adapters.py  test_phase123.py
tests/domain/: test_loop.py  test_schema.py  test_stagnation.py  test_state.py  test_types.py
(+22 files in other folders)
