[project]
name = "CLI-agent-memory"
version = "1.1.0"
description = "Autonomous coding agent CLI — complements MCP-agent-memory"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "mcp>=1.27",
]

[project.scripts]
CLI-agent-memory = "CLI_agent_memory.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
tui = ["textual>=0.50"]
server = ["fastapi>=0.100", "uvicorn>=0.24"]
jart-os = ["nats-py>=2.0", "redis>=5.0"]
all = ["CLI-agent-memory[dev,tui,server,jart-os]"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
